fix table overflow

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -64,9 +64,17 @@ img
   height: auto
 
 table
-  width: 100%
+  display: inline-block
+  max-width: 100%
+  overflow-y: scroll
   border-spacing: 1px
+  border-radius: 2px
   box-shadow: 0 0 0 1px reduce(12) inset
+
+@media (min-width: 50em)
+  table
+    display: table
+    width: 100%
 
 th, td
   padding: .5em 1em
